# mercury

./: .gitignore  .pylintrc  .sonarcloud.properties  CMakeLists.txt  CPPLINT.cfg  Jenkinsfile  Makefile  README.rst  build.bat  conanfile.py  conanfile.txt  requirements-dev.txt  windows-build.bat  windows-cppclient.bat  windows-gtest.bat
conan-platforms/: conan-profile-Linux-armv7l.info  conan-profile-Windows-VS2019-x86.info  conan-profile-Windows-devstudio-2019.info  conan-profile-armv7l.info  conan-profile-x86_64.info
conf/: kw_dev.yaml
debian/: changelog  control  mercury-dev.install  mercury.install  python-mercury.install  python2-mercury.install  rules
docs/: Makefile  doxygen.conf
docs/source/: conf.py  http.rst  index.rst  kano_world.rst  modules.rst  theme.rst
etc/: mercury.conf
include/kes_dashboard_live_tiles_client/: DefaultTileLoader.h  Exceptions.h  IDownloadable.h  IOnlineLoader.h  ISerialisable.h  ITile.h  ITileCache.h  ITileFactory.h  ITileLoader.h  ITileManager.h  OnlineLoader.h  Tile.h  TileCache.h  TileFactory.h  TileManager.h
include/kes_dashboard_live_tiles_client/internal/: DefaultTileLoader.h  Exceptions.h  IDownloadable.h  IOnlineLoader.h  ISerialisable.h  ITileCache.h  ITileLoader.h  OnlineLoader.h  TileCache.h
include/kes_moma_picks_client/: IPainting.h  IPaintingFactory.h  IPaintingManager.h  Painting.h  PaintingFactory.h  PaintingManager.h
include/kes_moma_picks_client/internal/: DefaultPaintingLoader.h  Exceptions.h  IDownloadable.h  IOnlineLoader.h  IPaintingCache.h  IPaintingLoader.h  ISerialisable.h  OnlineLoader.h  PaintingCache.h
include/mercury/: config.h.in
include/mercury/_http/: exceptions.h  http_client.h  http_client_interface.h
include/mercury/http/: exceptions.h  http_client.h  http_client_interface.h
include/mercury/kes_dashboard_live_tiles_cli/: DefaultTileLoader.h  Exceptions.h  IDownloadable.h  ILocalLoader.h  IOnlineLoader.h  ISerialisable.h  ITile.h  ITileCache.h  ITileFactory.h  ITileLoader.h  ITileManager.h  LocalLoader.h  (+5 more)
src/: CMakeLists.txt
src/_http/: http_client.cpp
src/cpp_client/: cpp_client.cpp
src/http/: http_client.cpp
src/kes_dashboard_live_tiles_cli/: DefaultTileLoader.cpp  LocalLoader.cpp  OnlineLoader.cpp  Tile.cpp  TileCache.cpp  TileFactory.cpp  TileManager.cpp
src/kes_dashboard_live_tiles_client/: DefaultTileLoader.cpp  OnlineLoader.cpp  Tile.cpp  TileCache.cpp  TileFactory.cpp  TileManager.cpp
src/kes_moma_picks_client/: DefaultPaintingLoader.cpp  OnlineLoader.cpp  Painting.cpp  PaintingCache.cpp  PaintingFactory.cpp  PaintingManager.cpp
src/kw/: APIConfig.cpp  kw.cpp
src/swig/: CMakeLists.txt  __init__.py  mercury.i  theme.i
src/swig/csharp/: CMakeLists.txt
src/swig/python/: CMakeLists.txt
src/swig/python2/: CMakeLists.txt
src/swig/python3/: CMakeLists.txt
src/theme/: theme.cpp
src/utils/: Environment.cpp  Filesystem.cpp  String.cpp  Time.cpp
test/: CMakeLists.txt  live_tests.cpp  test.cpp  thread_tests.cpp
test/fixtures/: EnvironmentFixture.h  kw_api.h  kw_utils_mixin.h  parental_consent.h  randomisation.h
test/fixtures/apiconfig/: APIConfigFixture.h
test/fixtures/apiconfig/data/: base.yaml  invalid.yaml  override.yaml
test/fixtures/data/api_me_response/: parental_consent.json
test/fixtures/data/api_response/accounts/auth/: login_success.json
test/fixtures/data/api_response/users/me/: invalid_parental_consent.json  no_parental_consent.json  parental_consent.json
test/fixtures/data/kes_dlt_response/: feed.json
test/fixtures/kes_dlt_cli/: KesDltResponsesFixture.h  KesDltValidResponsesFixture.h  TileCacheFixture.h
test/fixtures/kes_dlt_cli/data/: empty_feed1.json  feed1.json  feed2.json  feed3.json  invalid_feed2.json  malformed_feed1.json  malformed_feed2.json  malformed_feed3.json  tile_cache1.json
test/fixtures/kes_mp_cli/: KesMpResponsesFixture.h  KesMpValidResponsesFixture.h  PaintingCacheFixture.h
test/fixtures/kes_mp_cli/data/: empty_feed1.json  feed1.json  feed2.json  feed3.json  malformed_feed1.json  painting_cache1.json
test/helpers/: TemplateTests.h
test/kes_dashboard_live_tiles_cli/: LiveTestTileManager.h  TestDefaultTileLoader.h  TestLocalLoader.h  TestOnlineLoader.h  TestTile.h  TestTileCache.h  TestTileManager.h
test/kes_dashboard_live_tiles_client/: LiveTestTileManager.h  TestDefaultTileLoader.h  TestOnlineLoader.h  TestTile.h  TestTileCache.h  TestTileManager.h
test/kes_moma_picks_client/: TestDefaultPaintingLoader.h  TestOnlineLoader.h  TestPainting.h  TestPaintingCache.h  TestPaintingManager.h
test/kw/: apiconfig.h  kw_apis.h  kw_getters.h  kw_persistence.h  kw_renew_token.h  kw_server_data.h
test/live/kes_dashboard_live_tiles_client/: LiveTestTileManager.h
test/live/kes_moma_picks_client/: LiveTestPaintingManager.h
test/live/kw/: LiveTestKanoWorld.h
test/matchers/: JsonMatchers.h
test/mocks/: MockEnvironment.h  mock_http_client.h
test/mocks/kes_dlt_cli/: MockDefaultTileLoader.h  MockOnlineLoader.h  MockTile.h  MockTileCache.h  MockTileFactory.h  MockTileManager.h
test/mocks/kes_mp_cli/: MockDefaultPaintingLoader.h  MockOnlineLoader.h  MockPainting.h  MockPaintingCache.h  MockPaintingFactory.h  MockPaintingManager.h
test/python2/: test_mercury_module.py  test_python_version.py
test/python3/: common_functions.py  test_mercury_kw.py  test_mercury_kw_amiloggedin.py  test_mercury_kw_login.py  test_mercury_kw_persistence.py  test_mercury_kw_refresh.py  test_mercury_module.py  test_mercury_theme.py  test_python_version.py
test/test_package/: CMakeLists.txt  conanfile.py  example.cpp
test/theme/: theme.h
test/thread/: TestKanoWorldRefresh.h  TestKanoWorldSave.h
test/unit/kes_dashboard_live_tiles_client/: TestDefaultTileLoader.h  TestOnlineLoader.h  TestTile.h  TestTileCache.h  TestTileManager.h
test/unit/kes_moma_picks_client/: TestDefaultPaintingLoader.h  TestOnlineLoader.h  TestPainting.h  TestPaintingCache.h  TestPaintingManager.h
test/unit/kw/: apiconfig.h  kw_apis.h  kw_getters.h  kw_server_data.h
test/unit/theme/: theme.h
test/unit/utils/: TestEnvironment.h  TestFilesystem.h
(+9 files in other folders)
